--- a/Components/SupplierDialog/SupplierDialogCard.axaml
+++ b/Components/SupplierDialog/SupplierDialogCard.axaml
@@ -83,38 +83,50 @@
                         </StackPanel>
                         <Grid RowDefinitions="Auto Auto Auto Auto Auto Auto" Margin="0,20,0,0" RowSpacing="20">
                             <StackPanel Grid.Row="0">
-                                <TextBox
-                                    Classes="Clearable"
-                                    shadui:ControlAssist.Label="Supplier Name"
-                                    Watermark="e.g., Cobra Yellow Blast"
-                                    Text="{CompiledBinding SupplierName, Mode=TwoWay}">
-                                </TextBox>
+                                <Grid ColumnDefinitions="* Auto">
+                                    <StackPanel Grid.Column="0" HorizontalAlignment="Left">
+                                        <TextBox
+                                            Classes="Clearable"
+                                            Width="250"
+                                            shadui:ControlAssist.Label="Supplier Name"
+                                            Watermark="e.g., Cobra Yellow Blast"
+                                            Text="{CompiledBinding SupplierName, Mode=TwoWay}">
+                                        </TextBox>
+                                    </StackPanel>
+                                    <StackPanel Grid.Column="1" HorizontalAlignment="Right">
+                                        <TextBox
+                                            Classes="Clearable"
+                                            Width="250"
+                                            shadui:ControlAssist.Label="Contact Person"
+                                            Watermark="e.g., Marc Torres"
+                                            Text="{CompiledBinding ContactPerson, Mode=TwoWay}">
+                                        </TextBox>
+                                    </StackPanel>
+                                </Grid>
                             </StackPanel>
                             <StackPanel Grid.Row="1">
-                                <TextBox
-                                    Classes="Clearable"
-                                    shadui:ControlAssist.Label="Contact Person"
-                                    Watermark="e.g., Marc Torres"
-                                    Text="{CompiledBinding ContactPerson, Mode=TwoWay}">
-                                </TextBox>
+                                <Grid ColumnDefinitions="* Auto">
+                                    <StackPanel Grid.Column="0" HorizontalAlignment="Left">
+                                        <TextBox
+                                            Classes="Clearable"
+                                            Width="250"
+                                            shadui:ControlAssist.Label="Email"
+                                            Watermark="e.g., mardie.delacruz@yahoo.com"
+                                            Text="{CompiledBinding Email, Mode=TwoWay}">
+                                        </TextBox>
+                                    </StackPanel>
+                                    <StackPanel Grid.Column="1" HorizontalAlignment="Right">
+                                        <TextBox
+                                            Classes="Clearable"
+                                            Width="250"
+                                            shadui:ControlAssist.Label="Phone"
+                                            Watermark="e.g., 09182273847"
+                                            Text="{CompiledBinding PhoneNumber, Mode=TwoWay}">
+                                        </TextBox>
+                                    </StackPanel>
+                                </Grid>
                             </StackPanel>
                             <StackPanel Grid.Row="2">
-                                <TextBox
-                                    Classes="Clearable"
-                                    shadui:ControlAssist.Label="Email"
-                                    Watermark="e.g., mardie.delacruz@yahoo.com"
-                                    Text="{CompiledBinding Email, Mode=TwoWay}">
-                                </TextBox>
-                            </StackPanel>
-                            <StackPanel Grid.Row="3">
-                                <TextBox
-                                    Classes="Clearable"
-                                    shadui:ControlAssist.Label="Phone"
-                                    Watermark="e.g., 09182273847"
-                                    Text="{CompiledBinding PhoneNumber, Mode=TwoWay}">
-                                </TextBox>
-                            </StackPanel>
-                            <StackPanel Grid.Row="4">
                                 <TextBox
                                     Classes="Clearable"
                                     shadui:ControlAssist.Label="Products"
@@ -122,6 +134,42 @@
                                     Text="{CompiledBinding Products, Mode=TwoWay}">
                                 </TextBox>
                             </StackPanel>
+                            <Grid Grid.Row="3" ColumnDefinitions="* Auto">
+                                <StackPanel Grid.Column="0" HorizontalAlignment="Left">
+                                    <ComboBox
+                                        shadui:ControlAssist.Label="Delivery Schedule"
+                                        PlaceholderText="Set Schedule"
+                                        Width="250"
+                                        ItemsSource="{CompiledBinding DeliveryScheduleItems}"
+                                        SelectedItem="{CompiledBinding SelectedDeliverySchedule}">
+                                    </ComboBox>
+                                </StackPanel>
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                    <TextBlock Text="Schedule Pattern" Classes="LabelField"/>
+                                    <StackPanel Orientation="Horizontal" Margin="10,10,0,0" Spacing="20">
+                                        <RadioButton Content="Day" GroupName="SchedulePattern" Classes="FormRadio" IsChecked="{CompiledBinding IsScheduleDeliveryByDay}"/>
+                                        <RadioButton Content="Month" GroupName="SchedulePattern" Classes="FormRadio" IsChecked="{CompiledBinding IsScheduleDeliveryByMonth}"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Grid>
+                            <Grid Grid.Row="4" ColumnDefinitions="* Auto">
+                                <StackPanel Grid.Column="0" HorizontalAlignment="Left">
+                                    <ComboBox
+                                        shadui:ControlAssist.Label="Contract Terms"
+                                        PlaceholderText="Set Contract"
+                                        Width="250"
+                                        ItemsSource="{CompiledBinding ContractTermsItems}"
+                                        SelectedItem="{CompiledBinding SelectedContractTerms}">
+                                    </ComboBox>
+                                </StackPanel>
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                    <TextBlock Text="Contract Pattern" Classes="LabelField"/>
+                                    <StackPanel Orientation="Horizontal" Margin="10,10,0,0" Spacing="20">
+                                        <RadioButton Content="Day" GroupName="ContractPattern" Classes="FormRadio" IsChecked="{CompiledBinding IsContractTermsByDay}"/>
+                                        <RadioButton Content="Month" GroupName="ContractPattern" Classes="FormRadio" IsChecked="{CompiledBinding IsContractTermsByMonth}"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Grid>
                             <StackPanel Grid.Row="5">
                                 <ComboBox
                                     shadui:ControlAssist.Label="Status"
